# Nerdtracker_Client

./: .flake8  .gitattributes  .gitignore  Pipfile  conftest.py  dev.sh  pyproject.toml  requirements.txt
nerdtracker_client/: util.py
nerdtracker_client/constants/: stats.py
nerdtracker_client/player_list/: __init__.py  listing.py  snapshot_list.py
nerdtracker_client/scraper/: __init__.py  tracker_gg_scraper.py
nerdtracker_client/screenshots/: screenshotter.py
nerdtracker_client/tests/: constants.py  test_listing.py  test_playerlist.py  test_scraper.py  test_util.py
nerdtracker_client/tests/fixtures/: listing.py  player_list.py  scraper.py  stats.py
nerdtracker_client/tests/html/: joy_test_html.html
player_list/: listing.py
