[project]
name = "nerdtracker_client"
version = "0.0.1"
description = "Client for NerdTracker 2.0"
authors = [
    {name = "Cesar E. Garza", email="cesar@cegarza.com"},
]
requires-python = ">=3.10"

[tool.black]
line-length = 80
target-version = ["py310"]
extend-exclude = ["\\.ipynb$", "\\.pyi$"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true