[project]
name = "nerdtracker_client"
version = "0.0.1"
description = "Client for NerdTracker 2.0"
authors = [
    {name = "Cesar E. Garza", email="cesar@cegarza.com"},
]
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = "nerdtracker_client/tests"
addopts = [
    "-v",
    "--tb=auto",
    "--showlocals",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow",
]

[tool.black]
line-length = 80
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
pretty = true

[tool.isort]
profile = "black"
line_length = 80
src_paths = ["nerdtracker_client"]